crates/aion-awl/tests/fixtures/rev2/step-bodies/valid/general_concat.awl
//! Build the isolated dev-brief workspace path from config and workflow identity.
workflow general_concat
  input config: Config
  outcome provisioned: type Provisioned, route success

type Config      { repo_root: String }
type Provisioned { path: String }

step provision
  route provisioned(path: config.repo_root + "/.yggdrasil-worktrees/dev-brief/" + workflow.id)
